# joystickmidi

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
